--- a/app/src/main/res/layout/fragment_network.xml
+++ b/app/src/main/res/layout/fragment_network.xml
@@ -19,8 +19,8 @@
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
             android:text="Ester Brown"
-            android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,14 +36,14 @@
             app:layout_constraintBottom_toBottomOf="@id/user_name"
             app:layout_constraintStart_toEndOf="@id/user_name"
             app:layout_constraintTop_toTopOf="@id/user_name"
-            app:tint="#FFFFFF" />
+            app:tint="?attr/colorControlNormal" />
 
         <TextView
             android:id="@+id/ip_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="192.168.1.132"
-            android:textColor="#B0B3B8"
+            android:textColor="?android:attr/textColorPrimary"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/user_name" />
@@ -56,7 +56,7 @@
             android:src="@drawable/ic_refresh"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="#FFFFFF" />
+            app:tint="?attr/colorControlNormal" />
 
         <ImageView
             android:id="@+id/qr_icon"
@@ -67,7 +67,7 @@
             android:src="@drawable/ic_qr_code"
             app:layout_constraintEnd_toStartOf="@id/refresh_icon"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="#FFFFFF" />
+            app:tint="?attr/colorControlNormal" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -76,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Couldn't find any controller on the network"
-        android:textColor="#B0B3B8"
+        android:textColor="?android:attr/textColorPrimary"
         android:textSize="16sp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
