network interface is in working condition

--- a/app/src/main/res/layout/fragment_network.xml
+++ b/app/src/main/res/layout/fragment_network.xml
@@ -8,12 +8,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@+id/user_name"
@@ -73,12 +73,13 @@
 
     <TextView
         android:id="@+id/no_servers_found"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Couldn't find any controller on the network"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="16sp"
         android:gravity="center"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,12 +87,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/servers_list"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_layout"
         tools:listitem="@layout/item_server" />
 
 </org.fossify.voicerecorder.fragments.NetworkFragment>
