--- a/app/src/main/res/layout/item_server.xml
+++ b/app/src/main/res/layout/item_server.xml
@@ -14,6 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="?android:attr/textColorPrimary"
         tools:text="1." />
 
     <TextView
@@ -25,6 +26,7 @@
         app:layout_constraintStart_toEndOf="@+id/server_index"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/connect_button"
+        android:textColor="?android:attr/textColorPrimary"
         tools:text="VocalLink212" />
 
     <TextView
@@ -35,7 +37,8 @@
         app:layout_constraintTop_toBottomOf="@+id/server_name"
         app:layout_constraintStart_toEndOf="@+id/server_index"
         app:layout_constraintEnd_toStartOf="@id/connect_button"
-        tools:text="192.168.1.213" />
+        android:textColor="?android:attr/textColorPrimary"
+        tools:text="x.x.x.x" />
 
     <Button
         android:id="@+id/connect_button"
